--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ nav:
   - Home: index.md
   - Setup Guide:
     - Installation: getting-started/installation.md
+    - Configuration: getting-started/configuration.md
   - Architecture:
     - Overview: architecture/overview.md
     - Supervisor: architecture/supervisor.md
